# IC

./: .gitignore  README.md
proj1/sndfile-example-bin/: decoder  encoder  lossy_decoder  lossy_encoder  wav_cmp  wav_cp  wav_dct  wav_effects  wav_hist  wav_quant  x_0
proj1/sndfile-example-src/: CMakeLists.txt  bitStream.h  bit_stream.h  decoder.cpp  encoder.cpp  lossy_decoder.cpp  lossy_encoder.cpp  sample_hist_chan0.txt  sample_hist_chan1.txt  wav_cmp.cpp  wav_effects.cpp  wav_hist.cpp  wav_quant.cpp  wav_quant.h
proj2/: CMakeLists.txt  README.md
proj2/opencv-example-bin/: cp_image
proj2/opencv-src/: CMakeLists.txt  automate.py  bright_image.cpp  cp_image.cpp  golomb.h  golomb_decoder.cpp  golomb_encoder.cpp  image_decoder.cpp  image_encoder.cpp  imageauto.py  mirror_image.cpp  negative_image.cpp  rotate_image.cpp  test_golomb.cpp
proj3/: .gitignore  README.md
proj3/video-bin/: hello
proj3/video-src/: CMakeLists.txt  YUV4MPEG2Reader.h  auto-inter-lossy.py  auto-intra-lossy.py  auto-intra.py  bitStream.h  encoder.cpp  hello.cpp  interframe_decoder.cpp  interframe_encoder.cpp  intraframe_decoder.cpp  intraframe_encoder.cpp  lossy_inter_decoder.cpp  lossy_inter_encoder.cpp  lossy_intra_decoder.cpp  lossy_intra_encoder.cpp  video_cmp.cpp
